<resources>
    <string name="app_name">Vectras VM</string>
    <string name="qemu_version" translatable="false">Stable</string>
    <string name="startvm">VM STARTED!</string>
    <string name="stopvm">VM STOPPED!</string>
    <string name="noproccesses">NO PROCCESSES!</string>
    <string name="unknownstate">UNKNOWN STATE!</string>
    <string name="qemu_console_head" translatable="false">compat_monitor1 console\nQemu monitor - type \'help\' for more information\n(qemu)</string>
    <string name="desktopInstructions">To use External Mouse:\n\tDisable Mouse Acceleration inside the Guest OS.\n\t\tFor DSL use command: xset m 1\n"\t\tFor Other OSes disable \"Enhance pointer Precision\" or choose Mouse \"usb-tablet\" from Vectras main options.\n\tPlug in or Pair your USB/Bluetooth Mouse and press OK\n\tMove your mouse pointer to all desktop sides to calibrate.\n"</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close</string>
    <string name="address_caption">Address</string>
    <string name="reset">Reset</string>
    <string name="shutdown">Shut down</string>
    <string name="devices">Devices</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="help">Help</string>
    <string name="keyboard">Keyboard</string>
    <string name="name">name</string>
    <string name="size">size:</string>
    <string name="vectras_website">Vectras website</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="username">USERNAME</string>
    <string name="save">SAVE</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="external_vnc">External VNC</string>
    <string name="display">Display</string>
    <string name="remove">Remove</string>
    <string name="view_logs">View logs</string>
    <string name="input_mode_hardware_mouse">Hardware Mouse Mode</string>
    <string name="rom_name">VM name</string>
    <string name="rom_drive_qcow2_img_etc">Drive (qcow2, img, etc…)</string>
    <string name="qemu_params">QEMU params</string>
    <string name="add">ADD</string>
    <string name="import_iso">Import ISO</string>
    <string name="importRom">Import ROM</string>
    <string name="mouse_mode">Mouse mode</string>
    <string name="export">Export</string>
    <string name="sign_out">Sign out</string>
    <string name="hdd1" translatable="false">HDD1</string>
    <string name="hdd2" translatable="false">HDD2</string>
    <string name="create_a_machine">Create a Machine</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="auto">Auto</string>
    <string name="center_mouse">Mouse @</string>
    <string name="close">Close</string>
    <string name="color_format_caption">Color Format</string>
    <string name="color_mode">Color Mode</string>
    <string name="connect_button">Connect</string>
    <string name="connection_caption">Connection</string>
    <string name="ctrl_alt_del" translatable="false">Ctrl-Alt-Del</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="disconnect">Disconnect</string>
    <string name="export_settings">Export</string>
    <string name="export_settings_path">Export to file</string>
    <string name="enter_text">Send text</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="force_full_check">Force full-screen bitmap</string>
    <string name="import_export_settings">Import/Export Settings</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_file_url">Import from file or URL</string>
    <string name="info">Info</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
    <string name="input_mode_mouse">Mouse Pointer Control Mode</string>
    <string name="input_mode_panning">Desktop Panning Mode</string>
    <string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
    <string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
    <string name="input_mode_touch_pan_zoom_mouse">Touch Mouse Pan and Zoom</string>
    <string name="input_mode_touchpad">Touchpad</string>
    <string name="keep_password_button">Keep</string>
    <string name="local_mouse_check">Local mouse pointer</string>
    <string name="mouse_follow_pan">Mouse follow pan</string>
    <string name="nickname_caption">Nickname</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="one_to_one" translatable="false">1:1</string>
    <string name="open_doc">Manual/Wiki</string>
    <string name="pan_follow_mouse">Pan Follows Mouse</string>
    <string name="password_caption">Password</string>
    <string name="port_caption">Port</string>
    <string name="repeater_button">Repeater</string>
    <string name="repeater_caption">Enter the repeater address &lt;b&gt;only if&lt;/b&gt; you are using an&lt;br&gt;&lt;i&gt;UltraVNC&lt;/i&gt;-type repeater</string>
    <string name="repeater_clear">Don\'t use repeater</string>
    <string name="repeater_dialog_title">Repeater Information</string>
    <string name="repeater_empty_text">No repeater</string>
    <string name="repeater_save">Use this repeater address</string>
    <string name="save_as_copy">Save as Copy</string>
    <string name="scaling">Scaling</string>
    <string name="scaling_zoomable">Zoomable</string>
    <string name="patreon">Patreon</string>
    <string name="send_key_again">Send Key Again</string>
    <string name="special_keys">Send Keys</string>
    <string name="username_caption">Username</string>
    <string name="username_hint">For Windows Authentication</string>
    <string name="terminal">Terminal</string>
    <string name="install">Install</string>
    <string name="modify">Modify</string>
    <string name="try_again">Try again</string>
    <string name="size_in_gb">SIZE IN GB</string>
    <string name="create_qcow2">CREATE QCOW2</string>
    <string name="image_name">IMAGE NAME</string>
    <string name="make_image">MAKE IMAGE</string>
    <string name="imported_roms_will_be_shown_here">IMPORTED ROMS WILL BE SHOWN HERE</string>
    <string name="version">Version:</string>
    <string name="qemu" translatable="false">QEMU</string>
    <string name="arch">Arch:</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="service">SERVICE:</string>
    <string name="free_palistine">FREE PALISTINE</string>
    <string name="store">Store</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="check_your_internet_connection">Check your internet connection.</string>
    <string name="downloading_file">Downloading file..</string>
    <string name="lenght_of_file">"Lenght of file: "</string>
    <string name="downloaded_to_path">"Downloaded to path: "</string>
    <string name="downloaded_successfully">Downloaded Successfully!</string>
    <string name="user_interface">User interface</string>
    <string name="vnc" translatable="false">VNC</string>
    <string name="custom_memory">Custom memory</string>
    <string name="sound_card">SOUND CARD</string>
    <string name="boot_from">Boot from</string>
    <string name="shared_folder">Shared folder</string>
    <string name="custom_params">Custom params</string>
    <string name="x11_resolution">X11 Resolution</string>
    <string name="night_mode">Night mode</string>
    <string name="description">Description</string>
    <string name="powerpc_qemu" translatable="false">PowerPC</string>
    <string name="arm64_qemu" translatable="false">ARM64</string>
    <string name="x86_64">x86_64</string>
    <string name="i386_qemu" translatable="false">i386</string>
    <string name="description_html_supported">Description (HTML supported)</string>
    <string name="compressing_cvbi">Compressing CVBI</string>
    <string name="done">Done</string>
    <string name="are_removed_successfully">" are removed successfully!"</string>
    <string name="change_log">Change Log</string>
    <string name="language">Language</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="qemu_create_cmd">QEMU CREATE CMD</string>
    <string name="getit">Get</string>
    <string name="killqemu">Kill QEMU</string>
    <string name="installing">Installing…</string>
    <string name="setup_sound">Setup sound for Termux</string>
    <string name="setup_sound_guide_content">This enables virtual machines running on the Vectras VM to play audio using Termux. If you have not set up Termux yet, select Start setup, the command will be automatically copied to the clipboard, you need paste that command and run it in Termux to complete the setup. Next times, make sure Termux is running to play sound.</string>
    <string name="copied">Copied.</string>
    <string name="start_setup">Start setup</string>
    <string name="termux_is_not_installed">Termux is not installed</string>
    <string name="you_need_to_install_termux">You need to install Termux before setting up.</string>
    <string name="wating_for_you">Waiting for you…</string>
    <string name="oops">Oops!</string>
    <string name="warning">Warning!</string>
    <string name="cpu_not_support_64">The Android OS or CPU on your device does not support 64 bit, which means the VM will have poor performance and be unstable when running.</string>
    <string name="delete_all">Delete all</string>
    <string name="need_fix_json_before_create">The virtual machine list data is corrupted and needs to be repaired. Do you want to start repairing now?</string>
    <string name="problem_has_been_detected">Problem has been detected</string>
    <string name="you_have_not_added_any_storage_devices">You have not added any storage devices to start using or install an operating system. Do you want to continue creating?</string>
    <string name="continuetext">Continue</string>
    <string name="need_set_name">You need to give this virtual machine a new name.</string>
    <string name="can_not_use_mttcg">The virtual machine cannot run because CPU or Android OS on your phone does not support 64bit to use Multi-threaded TCG. Do you want to continue running the virtual machine with Single-threaded TCG?</string>
    <string name="unable_to_connect_to_server">Unable to connect to server.</string>
    <string name="you_are_ready_to_go">You are ready to go!</string>
    <string name="just_a_sec">Just a sec…</string>
    <string name="connecting">Connecting…</string>
    <string name="please_do_not_disconnect_the_network_this_may_take_a_few_minutes">Please do not disconnect the network. This may take a few minutes.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="the_setup_could_not_be_completed_and_below_is_the_log">The setup could not be completed and below is the log.</string>
    <string name="checking">Checking…</string>
    <string name="exit">Exit</string>
    <string name="defaulttext">Default</string>
    <string name="your_device_is_not_supported">Your device is not supported.</string>
    <string name="turnip_and_zink">Turnip &amp; Zink</string>
    <string name="please_try_again_later">Please try again later.</string>
    <string name="has_meets_the_requirements_to_install_content">Your device has met the requirements and is ready to begin installation now.</string>
    <string name="your_device_does_not_meet_the_requirements_to_continue">Your device does not meet the requirements to continue.</string>
    <string name="input_devices">Input devices</string>
    <string name="mouse">Mouse</string>
</resources>