<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setupwizard.TurnipZinkSetupWizardActivity">

    <LinearLayout
        android:id="@+id/ln_checking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile_arrow_up_right_96px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checking"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/just_a_sec" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_checking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:indeterminate="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ln_checking_cpi_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/cpi_checking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorSize="200dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_getting_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android_wifi_3_bar_100px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/just_a_sec" />
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_getting_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:indeterminate="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ln_getting_data_cpi_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/cpi_getting_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorSize="200dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_install"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile_arrow_down_100px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnip_and_zink"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_meets_the_requirements_to_install_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_install"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_installing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile_arrow_down_100px" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installing"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_do_not_disconnect_the_network_this_may_take_a_few_minutes" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_installing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:indeterminate="true"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ln_installing_cpi_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/cpi_installing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorSize="200dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_installed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile_check_96px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turnip_and_zink"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_ready_to_go" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_installed_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_offline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android_wifi_3_bar_alert_100px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unable_to_connect_to_server"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_try_again_later" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_offline_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_unsupport_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mobile_cancel_96px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_device_is_not_supported"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_device_does_not_meet_the_requirements_to_continue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_installing_packages_failed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_error_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/error_96px" />

        <TextView
            android:id="@+id/tv_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_went_wrong"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tv_error_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_setup_could_not_be_completed_and_below_is_the_log" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:background="@drawable/object_shape_single_high">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_error_log_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:textIsSelectable="true"
                    app:fontFamily="@font/googlesansvodevariablefontwght"/>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_try_again_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>