<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="48dp">

        <LinearLayout
            android:id="@+id/ln_all_options"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/MaterialAlertDialog.Material3Expressive.Title.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/input_devices" />

            <com.vectras.vm.view.SelectBoxView
                android:id="@+id/sbv_mouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:title="@string/mouse"
                app:subtitle="@string/defaulttext"
                android:background="@drawable/object_shape_top_high"/>

            <com.vectras.vm.view.SelectBoxView
                android:id="@+id/sbv_keyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/keyboard"
                app:subtitle="@string/defaulttext"
                android:background="@drawable/object_shape_bottom_high"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>